2007-11-15  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-sections.nsi (CalcDepends): Add dependency for
	libetpan.
	* src/make-msi.guids: Add libetpan and claws.

	* Makefile.am (EXTRA_DIST): Add these patches.
	* packages/packages.current: Update claws mail.  Download
	regex-bin package.
	* patches/claws-mail-3.0.2/01-w32-logo.patch,
	patches/claws-mail-3.0.2/02-w32-icon.patch,
	patches/claws-mail-3.0.2/03-smime-plugin.patch,
	patches/claws-mail-3.0.2/04-gettimeofday.patch,
	patches/claws-mail-3.0.2/99-auto.patch: New files.
	* configure.ac: Make regex a GNUWIN32 package.
	* src/inst-regex.nsi: Install regex.dll.
	* src/Makefile.am: Do not delete regex shared library.

2007-11-14  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi: Prefix kleopatra.bat by $BUILD_DIR.
	* src/make-msi.pl: Add INSTDIR\pub to PATH environment for gnupg.
	Handle /oname in File statements.  Handle upgrades.  Register
	DLLs.  Register services.
	* src/make-msi.guids: Update.

2007-11-13  Marcus Brinkmann  <marcus@g10code.de>

	* src/make-msi.pl: New file.
	* src/make-msi.bat: New file.
	* src/make-msi.guids: New file.
	* src/gpl.rtf: New file.

2007-11-12  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to kleopatra 20071112.

	* packages/packages.current: Update to kleopatra 20071109.

2007-11-08  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-gpgex.nsi: Add online documentation.
	* src/uninst-gpgex.nsi: Delete online documentation and other
	directories.

	* packages/packages.current: Update gpgex.

2007-11-02  Werner Koch  <wk@g10code.com>

	* src/g4wihelp.c (path_add): Remove debug stuff.

	* src/inst-kleopatra.nsi: Adjust location for some DLLs.

2007-10-26  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Add libetpan.
	* configure.ac: Add libetpan package.
	* include/config.nsi.in: Add support for libetpan.
	* src/Makefile.am (EXTRA_DIST): Add inst-libetpan.nsi and
	uninst-libetpan.nsi.